fix: decrease z-index of main container to resolve overlap issues

--- a/main.css
+++ b/main.css
@@ -660,7 +660,7 @@ input[type="range"]::-webkit-slider-thumb {
     justify-content: center;
     padding: 0;
     margin: 0;
-    z-index: 49;
+    z-index: 39;
   }
   #logout-btn {
     position: fixed;
